# ha-securecontrols-thermostat

./: README.md  __init__.py  api.py  config_flow.py  coordinator.py  diagnostics.py  hacs.json  manifest.json  pyproject.toml  services.yaml  variables.txt
.github/workflows/: ci.yml
custom_components/securecontrols_thermo/: __init__.py  api.py  climate.py  config_flow.py  const.py  coordinator.py  diagnostics.py  manifest.json
custom_components/securecontrols_thermo/translations/: strings.json
custom_components/securecontrols_thermostat/: api.py  climate.py  const.py  coordinator.py  manifest.json  sensor.py
custom_components/securecontrols_thermostat/translations/: en.json
tests/: test_api.py  test_client.py
